--- a/calc/templates/user_detail.html
+++ b/calc/templates/user_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% include 'navbar.html' %}
 <h1>User Details</h1>
 <p><strong>Name:</strong> {{ user.name }}</p>
 <p><strong>Age:</strong> {{ user.age }}</p>
